tests/expectations/parser/functions/annotated_arg_not_ident_fail.out
Error [EPAR0370005]: expected an identifier, ')', 'address, 'mapping' -- found '?'
    --> test:3:10
     |
   3 |     @foo(?, bar, ?)
     |          ^
Error [EPAR0370005]: expected an identifier, ')', 'address, 'mapping' -- found '123'
    --> test:8:10
     |
   8 |     @bar(123) // ints not vali
     |          ^^^
